overflow error has been fixed

--- a/Css/index.css
+++ b/Css/index.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    outline: 2px solid red;
 }
 a{
     text-decoration: none;
@@ -305,6 +306,10 @@ place-items: center;
     width: 100%;
     background-color: #0066FF;
 }
+.contact-us .contact{
+    width: 100%;
+    height: 100%;
+}
 .contact-us .contact .heading-two{
     width: 100%;
     color: #FFFFFF;
@@ -312,17 +317,18 @@ place-items: center;
     text-transform: uppercase;
     height: 30px;
     text-align: center;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .contact-us .contact .contact-list{
     width: 100%;
-    margin-left: 20px;
+    text-indent: 20px;
     line-height: 25px;
     font-size: 18px;
 }
 .contact-us .contact .doclist{
     width: 100%;
-    margin-left: 20px;
+    text-indent: 20px;
     line-height: 25px;
     font-size: 18px;
     display: flex;
